# BSplinesTrajOpt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  run.sh  run_com_example.sh  run_mu_example.sh
Coppelia/: SceneNao.ttt
Coppelia/cmake/linux-64/: coppelia-config.cmake
Coppelia/example/: CMakeLists.txt  main.cpp
Coppelia/remoteApi builder/: CMakeLists.txt
PQP/cmake/: pqp-config.cmake~
PQP/cmake/atom/: pqp-config.cmake~
PQP/cmake/linux-64/: pqp-config.cmake~
PQP/include/PQP/: PQP_Compile.h
PQP/lib/atom/: pqp-config.cmake~
Project/: CMakeLists.txt
Project/examples/: CMakeLists.txt  example_01.cc  example_02.cc  example_03.cc  example_04.cc
accuracy results/matlab/: accuracy.m  cData.txt  cData_.txt
accuracy results/matlab/old_analytic/a_analytic/: cData.txt  ddqData.txt  dqData.txt  qData.txt
accuracy results/matlab/old_analytic/b_analytic/: cData.txt  ddqData.txt  dqData.txt  qData.txt
accuracy results/matlab/old_analytic/c_analytic/: cData.txt  ddqData.txt  dqData.txt  qData.txt
accuracy results/matlab/old_bfgs/a_bfgs/: cData.txt  ddqData.txt  dqData.txt  qData.txt
accuracy results/matlab/old_bfgs/b_bfgs/: cData.txt  ddqData.txt  dqData.txt  qData.txt
accuracy results/matlab/old_bfgs/c_bfgs/: cData.txt  ddqData.txt  dqData.txt  qData.txt
accuracy results/with com/: ddqData_10.txt  ddqData_100.txt  ddqData_30.txt  ddqData_60.txt  dqData_10.txt  dqData_100.txt  dqData_30.txt  dqData_60.txt  precision.m  qData_10.txt  qData_100.txt  qData_30.txt  qData_60.txt  times with com
accuracy results/with com and mu/: ddqData_10.txt  ddqData_100.txt  ddqData_30.txt  ddqData_60.txt  dqData_10.txt  dqData_100.txt  dqData_30.txt  dqData_60.txt  precision.m  qData_10.txt  qData_100.txt  qData_30.txt  qData_60.txt  times with com and mu
accuracy results/with com/last/: ddqData_10.txt  ddqData_100.txt  ddqData_30.txt  ddqData_60.txt  dqData_10.txt  dqData_100.txt  dqData_30.txt  dqData_60.txt  qData_10.txt  qData_100.txt  qData_30.txt  qData_60.txt
accuracy results/without com and mu/: ddqData_10.txt  ddqData_100.txt  ddqData_30.txt  dqData_60.txt  precision.m  qData_10.txt
data/: NAOURDF_inertial.urdf  Nao_blue_noninertial.xbot  nao_inertial_python.urdf  nao_python.urdf
data/TROmodels/: HRP2.urdf  atlas.urdf  atlas_cpp_reduced.urdf  lwr.urdf
examples/: CMakeLists.txt  ipopt_interface.cpp  ipopt_interface.hpp  main_01.cpp  main_01.cpp.autosave  main_02.cpp  main_03.cpp  main_04.cpp  main_05.cpp  main_05______new.cpp
examples/accuracy_tests/: CMakeLists.txt  accuracy_test_01.cc  accuracy_test_02.cc  accuracy_test_03.cc
examples/examples/: CMakeLists.txt  main_01.cpp  main_02.cpp
examples/examples_com/: CMakeLists.txt  main_com_01.cpp  main_com_02.cpp  main_com_03.cpp  main_com_04.cpp  main_com_05.cpp  main_com_06.cpp  main_com_07.cpp  main_com_08.cpp
examples/examples_mu/: CMakeLists.txt  main_mu_01.cpp  main_mu_02.cpp  main_mu_03.cpp  main_mu_04.cpp  main_mu_05.cpp
examples/time_tests/: CMakeLists.txt  example_01.cc  example_02.cc  example_03.cc
examples/time_tests/com_mu_times/examples_com_analytic/: CMakeLists.txt  main_com_02.cpp  main_com_03.cpp  main_com_04.cpp  main_com_05.cpp  main_com_06.cpp
examples/time_tests/com_mu_times/examples_com_bfgs/: CMakeLists.txt  main_com_01.cpp  main_com_02.cpp  main_com_03.cpp  main_com_04.cpp  main_com_05.cpp  main_com_06.cpp
examples/time_tests/com_mu_times/examples_mu_analytic/: CMakeLists.txt  main_mu_01.cpp  main_mu_02.cpp  main_mu_03.cpp  main_mu_04.cpp
examples/time_tests/com_mu_times/examples_mu_bfgs/: CMakeLists.txt  main_mu_02.cpp  main_mu_03.cpp  main_mu_04.cpp
examples_com/: CMakeLists.txt  main_com_01.cpp  main_com_02.cpp  main_com_03.cpp  main_com_03_noiner.cpp  main_com_04.cpp  main_com_05.cpp  main_com_06 (copy).cpp  main_com_06.cpp
examples_mu/: CMakeLists.txt  main_mu_01.cpp  main_mu_02.cpp  main_mu_03.cpp  main_mu_04.cpp
geombd/cmake/linux-64/: geombd-config.cmake
geombd/include/geombd/: VanishProduct  core.h  dynamics.h  trajectoryOptimization.h  types.h  vanishProduct.h  variational.h
geombd/include/geombd/core/: Lie_operators.h  body.h  dynamic_body.h  geometry.h  joint.h  kinematics.h  markup.h  multibody.h  operational_handle.h  string_util.h  types.h  world.h
geombd/include/geombd/dynamics/: Lie_operators.h  forward_dynamics.h  inverse_dynamics.h  kinematics.h
geombd/include/geombd/trajectoryOptimization/: directCollocation.h
geombd/include/geombd/variational/: Dynamic.h  johnson.h
interpol results/: dqData_10.txt  dqData_100.txt  dqData_30.txt  qData_100.txt  qData_30.txt  times without com and mu
ipopt/: ipopt_interface.cpp  ipopt_interface.hpp  ipopt_interface_05.cpp  ipopt_interface_atlas_iner_com.cpp  ipopt_interface_atlas_iner_mu.cpp  ipopt_interface_atlas_iner_mu.hpp  ipopt_interface_nao.cpp  ipopt_interface_nao_com_test.cpp  ipopt_interface_nao_com_test.hpp  ipopt_interface_nao_iner_com.cpp  ipopt_interface_nao_iner_com.hpp  ipopt_interface_nao_iner_com_01.cpp  ipopt_interface_nao_iner_com_01.hpp  ipopt_interface_nao_iner_mu.cpp  ipopt_interface_nao_iner_mu.hpp  ipopt_interface_nao_iner_mu_01.cpp  ipopt_interface_nao_iner_mu_01.hpp
ipopt-BSplines-NLP/: CMakeLists.txt  main_01.cpp  main_02.cpp  main_03.cpp
time_tests/: CMakeLists.txt  example_01 (copy).cc  example_01.cc  example_03.cc
unitest/: test_analytic_derivatives_time.sh  test_centroidal_experiments.sh  test_com_centroidal_dynamics_accuracy.sh  test_com_experiments.sh  test_cost_constraints_accuracy.sh  test_numeric_derivatives_time.sh  test_symmetry_exploited.sh
