
add_executable(ipopt_example_01 main_01.cpp)
target_link_libraries(ipopt_example_01 ipopt_interface)
target_link_libraries(ipopt_example_01 ipopt)
target_link_libraries(ipopt_example_01 ${GeoMBD_LIBRARIES})
target_link_libraries(ipopt_example_01 ${PQP_LIBRARIES})

add_executable(ipopt_example_02 main_02.cpp)
target_link_libraries(ipopt_example_02 ipopt_interface)
target_link_libraries(ipopt_example_02 ipopt)
target_link_libraries(ipopt_example_02 ${GeoMBD_LIBRARIES})
target_link_libraries(ipopt_example_02 ${PQP_LIBRARIES})

add_executable(ipopt_example_03 main_03.cpp)
target_link_libraries(ipopt_example_03 ipopt_interface_nao)
target_link_libraries(ipopt_example_03 ipopt)
target_link_libraries(ipopt_example_03 ${GeoMBD_LIBRARIES})
target_link_libraries(ipopt_example_03 ${PQP_LIBRARIES})

add_executable(ipopt_example_04 main_04.cpp)
target_link_libraries(ipopt_example_04 ipopt_interface_nao)
target_link_libraries(ipopt_example_04 ipopt)
target_link_libraries(ipopt_example_04 ${GeoMBD_LIBRARIES})
target_link_libraries(ipopt_example_04 ${PQP_LIBRARIES})

add_executable(ipopt_example_05 main_05.cpp)
target_link_libraries(ipopt_example_05 ipopt_interface_05)
target_link_libraries(ipopt_example_05 ipopt)
target_link_libraries(ipopt_example_05 ${GeoMBD_LIBRARIES})
target_link_libraries(ipopt_example_05 ${PQP_LIBRARIES})
